bad/assign_arr_elem_class_class_side.example_compiler_output
ERROR
[1mbad/assign_arr_elem_class_class_side.lat:7:16: [1;31merror: [0;1massigning to `Y` from incompatible type `Z`[m
	(new Y[3])[1] = new Z;
	              [1;32m^[m
